data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2365.wast
;; 6. **Incorrectly Managed Implicit Labels**:    - **Test Description**: Use branching instructions that target implicit labels within nested blocks without introducing explicit labels.    - **Reasoning**: This verifies the handling and proper introduction of implicit labels in control flows.    - **Constraint checked**: Implicit Label    - **Relation to CFG**: Ensures CFG reflects the implicit structure and scope provided by block labels.

(assert_invalid
 (module
  (func
   (block
    (block
     (br 1)
     (i32.const 0)
    )
    (i32.const 1)
   )
  )
 )
 "unknown label"
)